--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -22,7 +22,7 @@ else
             @foreach (var customers in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(customers.Name, "Details", "Customers", new { id = customers.Id }, null)</td>
+                    <td>@Html.ActionLink(customers.Name, "Edit", "Customers", new { id = customers.Id }, null)</td>
                     <td>@customers.MembershipType.Name</td>
                 </tr>
             }
